# adventofcode

./: LICENSE  README.md
2020/: Cargo.toml
2020/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
2022/: Cargo.toml
2022/src/: day01.rs  day02.rs  file_wrappers.rs  lib.rs
src/: day1.rs  day2.rs  day4.rs  main.rs
