[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Ryan Zoeller <rtzoeller@rtzoeller.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
itertools = "0.10.0"
lazy_static = "1.4.0"
regex = "1.4.2"
